--- a/module_system/src/main/res/layout/system_item_question_list.xml
+++ b/module_system/src/main/res/layout/system_item_question_list.xml
@@ -20,25 +20,14 @@
 
         <TextView
                 android:id="@+id/tv_type_title1"
-                style="@style/text_15_333333_b"
+                style="@style/text_15_FF5234_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginStart="@dimen/gap_size13"
-                android:text="@{viewModel.questionType1}"
-                />
-
-        <TextView
-                android:id="@+id/tv_type_title2"
-                style="@style/text_15_FF5234_b"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_type_title1"
-                android:text="@{viewModel.questionType2}"
+                android:text="@{viewModel.questionType}"
                 />
 
         <View
@@ -48,7 +37,7 @@
                 android:background="@color/line_colorc"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_type_title2"
+                app:layout_constraintLeft_toRightOf="@id/tv_type_title1"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="@dimen/gap_size14"/>
 
