--- a/module_backstage/src/main/res/layout/back_acitivity_fan_list.xml
+++ b/module_backstage/src/main/res/layout/back_acitivity_fan_list.xml
@@ -19,17 +19,22 @@
                 android:id="@+id/layout_title"
                 layout="@layout/back_layout_title"/>
 
-
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+                android:id="@+id/refresh_layout"
+                app:layout_constraintTop_toBottomOf="@id/layout_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="@dimen/gap_size7"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/layout_title"
-                android:layout_marginTop="@dimen/gap_size7"
                 app:items="@{viewModel.observableList}"
                 app:adapter="@{viewModel.adapter}"
                 app:itemBinding="@{viewModel.itemBinding}"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 />
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
