--- a/module_backstage/src/main/res/layout/back_item_fan_list.xml
+++ b/module_backstage/src/main/res/layout/back_item_fan_list.xml
@@ -16,7 +16,8 @@
             android:layout_height="80dp"
             android:background="@color/appbg_color_white"
             android:layout_marginTop="@dimen/gap_size1"
-            tools:ignore="RtlSymmetry">
+            tools:ignore="RtlSymmetry"
+            app:onClickCommand="@{viewModel.itemOnClickCommand}">
 
         <ImageView
                 android:id="@+id/iv_avatar"
