--- a/module_exchange/src/main/res/layout/exchange_activity_bill_list.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_bill_list.xml
@@ -30,7 +30,8 @@
                 android:paddingEnd="@dimen/gap_size10"
                 android:paddingTop="@dimen/gap_size16"
                 android:paddingBottom="@dimen/gap_size9"
-                android:text="@{viewModel.date}"/>
+                android:text="@{viewModel.date}"
+                android:drawableEnd="@mipmap/exchange_down"/>
 
         <TextView
                 android:id="@+id/tv_total"
@@ -39,20 +40,36 @@
                 style="@style/text_13_999999"
                 app:layout_constraintLeft_toLeftOf="@id/tv_date"
                 app:layout_constraintTop_toBottomOf="@id/tv_date"
+                android:layout_marginStart="@dimen/gap_size15"
                 android:text="@{viewModel.totalIncome}"/>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipeLayout"
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+                android:id="@+id/refresh_layout"
                 app:layout_constraintTop_toBottomOf="@id/tv_total"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="@dimen/gap_size16"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp">
 
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-            />
-        </android.support.v4.widget.SwipeRefreshLayout>
+                    app:items="@{viewModel.observableList}"
+                    app:adapter="@{viewModel.adapter}"
+                    app:itemBinding="@{viewModel.itemBinding}"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    />
+
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+        <TextView
+                android:id="@+id/emptyView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@{viewModel.loadErrorStr}"
+                android:visibility="@{viewModel.showError ? 0 : 8}"
+                />
     </android.support.constraint.ConstraintLayout>
 </layout>
