--- a/module_exchange/src/main/res/layout/exchange_item_bill_list.xml
+++ b/module_exchange/src/main/res/layout/exchange_item_bill_list.xml
@@ -1,63 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/appbg_color_white"
-        tools:ignore="RtlSymmetry">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-            android:id="@+id/iv_pay_type"
-            android:layout_width="33dp"
-            android:layout_height="33dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="@dimen/gap_size17"
-            android:contentDescription="@string/image_description_default"/>
+    <data>
 
-    <TextView
-            android:id="@+id/tv_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_13_333333"
-            app:layout_constraintLeft_toRightOf="@id/iv_pay_type"
-            android:layout_marginStart="@dimen/gap_size15"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tv_time"
-            app:layout_constraintVertical_chainStyle="packed"
-    />
+        <variable
+                name="viewModel"
+                type="com.lcworld.module_exchange.viewmodel.recyclerItem.BillListItemViewModel"/>
 
-    <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/text_12_999999"
-            app:layout_constraintLeft_toLeftOf="@id/tv_type"
-            app:layout_constraintTop_toBottomOf="@id/tv_type"
-            app:layout_constraintBottom_toBottomOf="parent"
-    />
+    </data>
 
-    <TextView
-            android:id="@+id/tv_amount"
-            style="@style/text_15_333333"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="@dimen/gap_size17"
-    />
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/appbg_color_white"
+            tools:ignore="RtlSymmetry">
 
-    <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            app:layout_constraintLeft_toLeftOf="@id/tv_time"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/line_colorc"/>
+        <ImageView
+                android:id="@+id/iv_pay_type"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@{viewModel.payTextImage}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginStart="@dimen/gap_size17"
+                android:contentDescription="@string/image_description_default"/>
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+                android:id="@+id/tv_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/text_13_333333"
+                app:layout_constraintLeft_toRightOf="@id/iv_pay_type"
+                android:layout_marginStart="@dimen/gap_size15"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/tv_time"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:text="@{viewModel.payTypeText}"
+                />
 
+        <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/text_12_999999"
+                app:layout_constraintLeft_toLeftOf="@id/tv_type"
+                app:layout_constraintTop_toBottomOf="@id/tv_type"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@{viewModel.date}"
+                />
+
+        <TextView
+                android:id="@+id/tv_amount"
+                style="@style/text_15_333333"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.amount}"
+                android:textColor="@{viewModel.isIncome() ? @color/tx_colore : @color/tx_colorb}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginEnd="@dimen/gap_size17"
+                />
+
+        <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                app:layout_constraintLeft_toLeftOf="@id/tv_time"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@color/line_colorc"/>
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
