--- a/module_system/src/main/res/layout/system_activity_check_status.xml
+++ b/module_system/src/main/res/layout/system_activity_check_status.xml
@@ -28,6 +28,7 @@
                 android:contentDescription="@string/image_description_default"/>
 
         <TextView
+                android:id="@+id/tv_tips"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/text_15_666666"
@@ -35,7 +36,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_check_status"
                 android:layout_marginTop="@dimen/gap_size22"
-                android:text="@string/system_checking_tips"
                 />
     </android.support.constraint.ConstraintLayout>
 </layout>
