--- a/module_backstage/src/main/res/layout/back_acitivity_entrance.xml
+++ b/module_backstage/src/main/res/layout/back_acitivity_entrance.xml
@@ -190,7 +190,8 @@
                     android:text="@string/back_fan_manage"
                     app:layout_constraintLeft_toLeftOf="@id/guideline1"
                     app:layout_constraintTop_toBottomOf="@id/line2"
-                    android:layout_marginTop="@dimen/gap_size21"/>
+                    android:layout_marginTop="@dimen/gap_size21"
+                    android:layout_marginBottom="@dimen/gap_size13"/>
 
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler"
