--- a/module_backstage/src/main/res/layout/back_acitivity_fan_search.xml
+++ b/module_backstage/src/main/res/layout/back_acitivity_fan_search.xml
@@ -59,26 +59,46 @@
                 android:contentDescription="@string/image_description_default"/>
 
         <EditText
+                android:id="@+id/et_input"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toRightOf="@id/iv_search"
                 app:layout_constraintRight_toRightOf="@id/bg_input"
                 app:layout_constraintTop_toTopOf="@id/bg_input"
                 app:layout_constraintBottom_toBottomOf="@id/bg_input"
+                android:layout_marginStart="@dimen/gap_size8"
                 style="@style/text_13_333333"
                 android:background="@null"
+                android:inputType="number"
+                android:digits="0123456789"
                 tools:ignore="Autofill,LabelFor,TextFields"/>
 
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+                android:id="@+id/refresh_layout"
                 app:layout_constraintTop_toBottomOf="@id/bg_title"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="@dimen/gap_size7"
-                app:items="@{viewModel.observableList}"
-                app:adapter="@{viewModel.adapter}"
-                app:itemBinding="@{viewModel.itemBinding}"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:items="@{viewModel.observableList}"
+                    app:adapter="@{viewModel.adapter}"
+                    app:itemBinding="@{viewModel.itemBinding}"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    />
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+        <TextView
+                android:id="@+id/emptyView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@{viewModel.loadErrorStr}"
+                android:visibility="@{viewModel.showError ? 0 : 8}"
                 />
     </android.support.constraint.ConstraintLayout>
 </layout>
