--- a/module_home/src/main/res/layout/home_activity_msgdetail.xml
+++ b/module_home/src/main/res/layout/home_activity_msgdetail.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+                name="viewModel"
+                type="com.lcworld.module_home.viewmodel.MsgDetailViewModel"/>
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/qmui_topbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+                android:id="@+id/qmui_topbar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_content"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/gap_size9"
-        android:layout_marginStart="@dimen/gap_size17"
-        android:layout_marginEnd="@dimen/gap_size19"
-        android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/gap_size9"
-        android:textSize="@dimen/tx_size13"
-        android:textColor="@color/tx_colorb"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/qmui_topbar"
-        tools:text="详情" />
-</android.support.constraint.ConstraintLayout>
+        <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/gap_size9"
+                android:layout_marginStart="@dimen/gap_size17"
+                android:layout_marginEnd="@dimen/gap_size19"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/gap_size9"
+                android:textSize="@dimen/tx_size13"
+                android:textColor="@color/tx_colorb"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/qmui_topbar"
+                tools:text="详情"/>
+    </android.support.constraint.ConstraintLayout>
+</layout>
